--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
@@ -23,6 +21,9 @@
 # misc
 .DS_Store
 *.pem
+Thumbs.db
+*.log
+.eslintcache
 
 # debug
 npm-debug.log*
@@ -30,8 +31,14 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# ✅ [중요] 환경 변수 보안 강화
+# .env* 로 되어있으면 .env.example까지 무시될 수 있으므로 아래 방식을 권장합니다.
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+# 만약 .env.example 같은 템플릿 파일은 깃허브에 올리고 싶다면 위처럼 개별 지정이 안전합니다.
 
 # vercel
 .vercel
@@ -39,3 +46,7 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# IDEs
+.vscode/
+.idea/
